Implementing Security Policies/Dynamic-custom-admission-controller/Kyverno/Manifests/4. require-resource-requests/nginx-with-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-resources
  labels:
    app: nginx
    owner: dev-team
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "200m"
        memory: "256Mi"
